--- a/blog-master/angular.json
+++ b/blog-master/angular.json
@@ -23,7 +23,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "docs",
+            "outputPath": "dist/blog",
+            "baseHref": "/blog/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
